kustomize/overlays/cilium-egrees/cnp-egrees.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: silly-demo-egrees
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: silly-demo
  egress:
    - toFQDNs:
      - matchName: "devopstoolkitseries.com"
      - matchPattern: "*.devopstoolkitseries.com"
    - toEndpoints:
      - matchLabels:
          "k8s:io.kubernetes.pod.namespace": production
    - toEndpoints:
      - matchLabels:
          "k8s:io.kubernetes.pod.namespace": kube-system
          "k8s:k8s-app": kube-dns
      toPorts:
      - ports:
        - port: "53"
          protocol: ANY
        rules:
          dns:
            - matchPattern: "*"
